Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access "refs/heads/*"]
 	push = +force group G3 Contributors
+	pushMerge = group G3 Contributors
+	rebase = group G3 Contributors
+	submit = group G3 Contributors
+	submitAs = group G3 Contributors
